created html pages and tree verifying

--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Genealogical tree</title>
+		<title>Persons. Genealogical tree</title>
+		<script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
 	</head>
 	<body>
-		<h1>Persons</h1>
+		<h1>Main</h1>
 		<div>
-			<div><a href="/">Persons</a></div>
+			<div><a href="add_person.html">Add persons</a></div>
+			<div><a href="ls_persons.html">Persons</a></div>
 			<div><a href="marry_off.html">Marry off</a></div>
-		</div>
-		<div>
-			<h2>Create</h2>
-			<div>Name: <input> Sex: <select></select> Parents <select></select></div>
-		</div>
-		<div>
-			<h2>List</h2>
-			<div></div>
 		</div>
 	</body>
 </html>
