--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Persons. Genealogical tree</title>
+		<meta charset="utf-8">
+		<title>Main page. Genealogical tree</title>
+		<link rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
 	</head>
 	<body>
-		<h1>Main</h1>
-		<div>
-			<div><a href="add_person.html">Add persons</a></div>
-			<div><a href="ls_persons.html">Persons</a></div>
+		<h1>Main page</h1>
+		<div class="cblock">
+			<div><a href="index.html">Main page</a></div>
+			<div><a href="add_person.html">Add person</a></div>
+			<div><a href="ls_persons.html">Person list</a></div>
 			<div><a href="marry_off.html">Marry off</a></div>
+		</div>
+		<div class="cblock">
+			<h2>task.md</h2>
+			<iframe src="task.md" width="500" height="500">See file task.md</iframe>
 		</div>
 	</body>
 </html>
