--- a/marry_off.html
+++ b/marry_off.html
@@ -1,80 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Marry off. Genealogical tree</title>
+		<link rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
-		<script type="text/javascript">
-			$(function() {
-				var updateSingle = function() {
-					$('#form_man')
-						.empty()
-						.append('<option value="">chouse man</option>');
-					$('#form_woman')
-						.empty()
-						.append('<option value="">chouse woman</option>');
-
-					$.ajax({
-						url: "single.php",
-						success: function(data){
-							for (var i in data.persons) {
-								if (data.persons[i].sex == "man") {
-									$("#form_man").append($("<option>")
-										.val(data.persons[i].id)
-										.text(data.persons[i].name));
-								} else if (data.persons[i].sex == "woman") {
-									$("#form_woman").append($("<option>")
-										.val(data.persons[i].id)
-										.text(data.persons[i].name));
-								}
-							}
-						},
-					});
-				}
-
-				$("#form_button").click(function(){
-					if (!$("#form_man").val().length || !$("#form_woman").val().length) {
-						alert("error: select man and woman");
-						return;
-					}
-
-					$.ajax({
-						url: "define_family_pair.php",
-						data: {
-							'man_id': $("#form_man").val(),
-							'woman_id': $("#form_woman").val()
-						},
-						success: function(data){
-
-							alert("Success");
-
-							updateSingle();
-						},
-					});
-				});
-
-				updateSingle();
-			});
-		</script>
+		<script type="text/javascript" src="js/marry_off.js"></script>
 	</head>
 	<body>
 		<h1>Marry off</h1>
-		<div>
-			<div><a href="add_person.html">Add persons</a></div>
-			<div><a href="ls_persons.html">Persons</a></div>
+		<div class="cblock">
+			<div><a href="index.html">Main page</a></div>
+			<div><a href="add_person.html">Add person</a></div>
+			<div><a href="ls_persons.html">Person list</a></div>
 			<div><a href="marry_off.html">Marry off</a></div>
 		</div>
-		<div>
+		<div class="cblock">
 			<h2>Form</h2>
 			<div>
 				<div>
-					<b>Man:</b>
+					<label for="form_man">Man:</label><br/>
 					<select id="form_man"></select>
 				</div>
 				<div>
-					<b>Woman:</b>
+					<label for="form_woman">Woman:</label><br/>
 					<select id="form_woman"></select>
 				</div>
-				<div><button id="form_button">Submit</button></div>
+				<div>
+					<button id="form_button">Marry</button>
+				</div>
 			</div>
 		</div>
 	</body>
