--- a/marry_off.html
+++ b/marry_off.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="cblock">
 			<h2>Form</h2>
-			<div>
+			<div class="form">
 				<div>
 					<label for="form_man">Man:</label><br/>
 					<select id="form_man"></select>
@@ -27,7 +27,7 @@
 					<select id="form_woman"></select>
 				</div>
 				<div>
-					<button id="form_button">Marry</button>
+					<button id="form_button">Marry off</button>
 				</div>
 			</div>
 		</div>
