--- a/add_person.html
+++ b/add_person.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="cblock">
 			<h2>Add person form</h2>
-			<div>
+			<div class="form">
 				<div>
 					<label for="form_name">Name:</label><br/>
 					<input id="form_name" name="form_name"/>
