docker and small fixes

--- a/marry_off.html
+++ b/marry_off.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Marry off. Genealogical tree</title>
 		<link rel="stylesheet" href="style.css">
-		<script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+		<script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
 		<script type="text/javascript" src="js/marry_off.js"></script>
 	</head>
 	<body>
