--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Main page. Genealogical tree</title>
 		<link rel="stylesheet" href="style.css">
-		<script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+		<script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
 	</head>
 	<body>
 		<h1>Main page</h1>
