--- a/ls_persons.html
+++ b/ls_persons.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<title>Person list. Genealogical tree</title>
 		<link rel="stylesheet" href="style.css">
-		<script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
-		<script type="text/javascript" src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="//cpettitt.github.io/project/dagre-d3/latest/dagre-d3.js" charset="utf-8"></script>
+		<script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
+		<script type="text/javascript" src="js/d3.v3.min.js" charset="utf-8"></script>
+		<script type="text/javascript" src="js/dagre-d3.js" charset="utf-8"></script>
 		<script type="text/javascript" src="js/ls_persons.js"></script>
 	</head>
 	<body>
