--- a/ls_persons.html
+++ b/ls_persons.html
@@ -6,7 +6,12 @@
 		<link rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
 		<script type="text/javascript" src="js/d3.v3.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="js/dagre-d3.js" charset="utf-8"></script>
+		<script type="text/javascript" src="js/dagre-d3.min.js" charset="utf-8"></script>
+		<script type="text/javascript">
+			SVGElement.prototype.getTransformToElement = SVGElement.prototype.getTransformToElement || function(elem) {
+				return elem.getScreenCTM().inverse().multiply(this.getScreenCTM());
+			};
+		</script>
 		<script type="text/javascript" src="js/ls_persons.js"></script>
 	</head>
 	<body>
